objects/Question.object
<CustomObject>
    <fields>
        <fullName>Age_days__c</fullName>
        <description>Number of days since this question was posted.</description>
        <formula>NOW() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since this question was posted.</inlineHelpText>
        <label>Age (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answered__c</fullName>
        <description>Indicates whether there was an answer to this question, as indicated by selection of a best reply.</description>
        <formula>IF(ISNULL(BestReplyId) || ISBLANK(BestReplyId) || (BestReplyId == &apos;&apos;), &apos;Answered&apos;, &apos;Unresolved&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether there was an answer to this question, as indicated by selection of a best reply.</inlineHelpText>
        <label>Answered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Response_Time__c</fullName>
        <description>Time of the first response to this question.</description>
        <inlineHelpText>Time of the first response to this question.</inlineHelpText>
        <label>First Response - Time</label>
        <summarizedField>Reply.CreatedDate</summarizedField>
        <summaryForeignKey>Reply.QuestionId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Response_Count_del__c</fullName>
        <description>Total number of responses to this question.</description>
        <inlineHelpText>Total number of responses to this question.</inlineHelpText>
        <label>Response Count</label>
        <summaryForeignKey>Reply.QuestionId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Time_to_Best_Reply__c</fullName>
        <description>Amount of time between first post and the best reply, as chosen.</description>
        <formula>IF(ISNULL(BestReply.CreatedDate), 0, BestReply.CreatedDate - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of time between first post and the best reply, as chosen.</inlineHelpText>
        <label>Time to Best Reply</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_First_Response__c</fullName>
        <description>Time elapsed since the question was first asked to the first response.</description>
        <formula>IF(ISNULL(First_Response_Time__c), 0, First_Response_Time__c - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time elapsed since the question was first asked to the first response.</inlineHelpText>
        <label>Time to First Response</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Record_type_for_community_09a3000000006wbAAA_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>*Company-wide Ideas*: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a3000000006zPAAQ_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>Customer Community Ideas*: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a300000004M1VAAU_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>Announcements: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a300000004M1aAAE_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>CRM Rollout: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a300000004M1fAAE_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>Green Office Initiative - Reduce, Reuse, Recycle: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a300000004M1kAAE_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>My Product Idea: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a300000004M1pAAE_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>My Services Idea: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a300000004M1qAAE_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>My Sales Idea: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a300000004M1uAAE_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>My IT Idea: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a300000004M1zAAE_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>My Foundation Idea: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a300000004M24AAE_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>My Marketing Idea: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a300000004uGeAAI_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>Answers: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a3000000050d1AAA_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>*Customers Answers Community*: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a30000000L9iTAAS_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>Social Support Answers: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a30000000LApuAAG_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>Video Conferencing: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a30000000LApzAAG_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>Wireless Solutions: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a30000000LAq4AAG_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>Routers and Switches: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09aa0000000LBtOAAW_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific zone</description>
        <label>customer community ideas: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09aa0000000LBtTAAW_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific zone</description>
        <label>partner communities ideas: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09aa0000000LFBUAA4_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific zone</description>
        <label>MSS: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09aa0000000LFBZAA4_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific zone</description>
        <label>MSS 2: Question Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>